apps/inventory-visibility-service/src/main/java/com/example/scmplatform/inventoryvisibility/domain/error/NodeNotFoundException.java
package com.example.scmplatform.inventoryvisibility.domain.error;

public class NodeNotFoundException extends RuntimeException {
    public NodeNotFoundException(String nodeId) {
        super("Inventory node not found: " + nodeId);
    }
}
